upcoming mobile update

--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India"> {% endblock desc%}
-{% block key%}<meta name="keywords" content="new mobile phone coming soon, Upcoming mobile phone in 2020, New upcoming smartphones, upcoming phones in 2020, new mobile phones 2020, new smartphone coming soon   "> {% endblock key%}
+{% block key%}<meta name="keywords" content="new mobile phone coming soon, Upcoming mobile phone in 2020, New upcoming smartphones, upcoming phones in 2020, new mobile phones 2020, new smartphone coming soon, upcoming smartphone   "> {% endblock key%}
 {% block style %}
 <style>
   .code{
@@ -27,13 +27,13 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight:400;">10 Upcoming mobile phones in 2020</h1>
+          <h1 class="content_tittle" style="font-weight:400;">13 Upcoming mobile phones in 2020 (August)</h1>
           <p>By <span style="color:blue;">Gulshan Bhumij</span>- Updated on <b style="color: gray;">27 July, 2020</b></p>
           <hr class="my-2">
-          <p class="content" style="font-size: 17px;">Are you searching for the <b>upcoming mobile phones in 2020</b>, so here is the list of <b>new mobile phone coming soon</b> in India. With lots of rumors and leaks about the upcoming mobile phones, we have listed the phones which were coming soon in India. The new upcoming mobile phones are packed with lots of features like powerful processor, long battery life, better RAM management system, camera, and lots of innovation in mobile technology. New upcoming smartphones have both software and hardware updates which is the most important for mobile phones. So without taking much of your time, here is the list of best <b>upcoming phones in 2020</b>.</p>
+          <p class="content" style="font-size: 17px;">Are you searching for the <b>upcoming mobile phones in 2020</b>, so here is the list of <b>new mobile phone coming soon</b> in India. With lots of rumors and leaks about the upcoming smartphone, we have listed the phones which were coming soon in India. The new upcoming mobile phones are packed with lots of features like powerful processor, long battery life, better RAM management system, camera, and lots of innovation in mobile technology. New upcoming smartphones have both software and hardware updates which is the most important for mobile phones. So without taking much of your time, here is the list of best <b>upcoming phones in 2020</b>.</p>
         </div>
         <div class="code">
-          <h3 style="font-weight:400;">The list of new mobile phones - 2020</h3>
+          <h3 style="font-weight:400;">The list of Upcoming mobile phones - 2020</h3>
           <ul>
             <li>OnePlus Nord</li>
             <li>Samsung Galaxy M31s</li>
@@ -52,7 +52,7 @@
         </div>
         <p></p>
         <div>
-          <h4 style="font-weight: 400;">Upcoming mobiles in india 2020 under 15000 rs.</h4>
+          <h3 style="font-weight: 400;">Upcoming mobiles in india 2020 under 15000 rs.</h3>
           <ul>
             <li>Poco C3 - 8,499-INR</li>
             <li>Xiaomi A4 - 13,999-INR</li>
@@ -65,10 +65,12 @@
         <hr class="my-2">
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">1. OnePlus Nord</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Xzh8BdaaAvs"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-m31s.jpg'%}" alt="">
+          </div>
           <hr class="my-2">
           <p><b>Price</b> : Starting from 24,999-INR <br><b>Release date</b> : 4th August, 2020 </p>
-          <p></p>
+          <p></p>"{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}"
           <p class="content">OnePlus has announced to introduce its <b>new smartphone coming soon</b> on 4 August. OnePlus Nord is starting from 24999-INR in India.</p>
           <h4 class="content">OnePlus Nord: Key specifications </h4>
           <ul class="content">
@@ -88,7 +90,6 @@
             <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-m31s.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: All World Tony Stark</p>
-          <hr class="my-2">
           <p><b>Expected price</b> : 16,999-INR <br><b>Release date</b> : 30 july, 2020 </p>
           <p></p>
           <p class="content">After the grand success of the Samsung Galaxy M31, Samsung has now brought a new smartphone <span>Samsung Galaxy M31</span>.</p>
@@ -106,8 +107,10 @@
         <!-- 3 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">3. Samsung Galaxy Note 20</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/u9sHT_Rh3qY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  XEETECHCARE</p>
           <p><b>Expected price</b> : 99,999-INR <br><b>Release date</b> : 05 Aug, 2020 (Unofficial) </p>
           <h4 class="content">Samsung Galaxy Note 20: Key specifications </h4>
           <ul class="content">
@@ -123,8 +126,10 @@
         <!-- 4 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">4. Samsung Galaxy Note 20 Ultra</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/UnWn1KVURGc" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  TechTalkTV</p>
           <p><b>Expected price</b> : 121,990-INR <br><b>Release date</b> : 05 Aug, 2020 (Unofficial) </p>
           <p class="content">Samsung has announced to introduce its <b>new smartphone coming soon</b> on 5 August, 2020 (Unofficial). Samsung galaxy note 20 ultra is starting from 121,990-INR in India.</p>
           <h4 class="content">Samsung Galaxy Note 20 Ultra: Key specifications </h4>
@@ -141,8 +146,10 @@
         <!-- 5 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">5. Asus Zenfone 7</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/0ebWk9b2-yI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/asus-zenfone-7.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  SmartPanda Gaming</p>
           <p><b>Expected price</b> : 34,999-INR <br><b>Release date</b> : Not announced yet. </p>
           <h4 class="content">Asus Zenfone 7: Key specifications </h4>
           <ul class="content">
@@ -158,7 +165,9 @@
         <!-- 6 -->
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">6. Asus Zenfone 7 pro</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/CbW7HdH-Ytg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/asus-zenfone-7-pro.jpg'%}" alt="">
+          </div>
           <hr class="my-2">
           <p><b>Expected price</b> :  Rs 39,990 <br><b>Release date</b> :  October 13, 2020 (Unofficial). </p>
           <h4 class="content">Asus Zenfone 7 pro: Key specifications </h4>
@@ -175,8 +184,10 @@
         <!-- 7 -->
         <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">7. Poco C3</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/NSDktWO0woY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by:  Naxon Tech</p>
           <p><b>Expected price</b> : 8,499-INR <br><b>Release date</b> : Not announced yet. </p>
           <p class="content">After the success of Poco F1 and Poco X2, now Poco is bringing a budget phone called Poco C3. in india starting from 8,999-INR</p>
           <h4 class="content">Poco C3: Key specifications </h4>
@@ -193,26 +204,30 @@
 
         <!-- 7 -->
          <div class="info">
-          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">8. Xiaomi A4 </h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Z6a7OhC9W_M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">8. Xiaomi Mi A4 </h2>
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/xiaomi-mi-a4.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  Kitty gadgets</p>
           <p><b>Expected price</b> : 13,999-INR <br><b>Release date</b> : 20 Aug, 2020 (Unofficial) </p>
-          <h4 class="content">Xiaomi A4: Key specifications </h4>
+          <h4 class="content">Xiaomi Mi A4: Key specifications </h4>
           <ul class="content">
-            <li>Display : 6.53"(1080*2400)</li>
+            <li>Display : 6.53-inches (1080*2400)</li>
+            <li>Processor : Qualcomm Snapdragon 712</li>
             <li>Rear Camera : 48MP + 8MP + 2MP + 2MP </li>
             <li>Front Camera : 32GB</li>
             <li>Storage/RAM : 64GB/4GB RAM</li>
             <li>Battery : 4050 mAh battery</li>
-            <li>Processor : Qualcomm Snapdragon 712</li>
           </ul>
           <hr class="my-2">
         </div>
         <!-- 8 -->
          <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">9. Realme C15 </h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/a3Cci-84PLY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/realme-c15.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  echnical School</p>
          <p><b>Expected price</b> : 12,999-INR <br><b>Release date</b> : 31 july, 2020 </p>
           <h4 class="content">Realme C15: Key specifications </h4>
           <ul class="content">
@@ -228,8 +243,10 @@
         <!-- 9 -->
         <div class="info">
          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">10. Redmi 9 prime</h2>
-         <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/0ZB0YSgYz34" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         <hr class="my-2">
+         <div>
+           <img class="image" src="{% static 'image/article/mobile/upcoming mobile/redmi-9-prime.jpg'%}" alt="">
+         </div>
+         <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: GSMArena Official Hindi</p>
          <p><b>Expected price</b> : 9,999-INR <br><b>Release date</b> : 4th August 2020 (expected). </p>
          <p class="content"></p>
          <h4 class="content">Redmi 9 prime: Key specifications </h4>
@@ -246,8 +263,10 @@
         <!-- 10 -->
          <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">11. Realme X3 Pro</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/pWqqDmmD3Ww" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/realme-x3-pro.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: NSK Gyan</p>
           <p><b>Expected price</b> : 31,999-INR <br><b>Release date</b> : Not announced yet. </p>
           <p class="content"></p>
           <h4 class="content">Realme X3 Pro: Key specifications </h4>
@@ -264,8 +283,10 @@
         <!-- 11 -->
          <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">12. Redmi 9A</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/QM0tfag9E58" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <hr class="my-2">
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/redmi-9a.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: Vy Vo Xuan</p>
           <p><b>Expected price</b> : 6,999-INR <br><b>Release date</b> : 4 august, 2020 </p>
           <p class="content"></p>
           <h4 class="content">Redmi 9A: Key specifications </h4>
@@ -282,8 +303,10 @@
           <!-- 13 -->
           <div class="info">
            <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">13. Motorola G 5G Plus</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/SHh_H2FOr9Q"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           <hr class="my-2">
+           <div>
+             <img class="image" src="{% static 'image/article/mobile/upcoming mobile/moto-g-5g.jpg'%}" alt="">
+           </div>
+           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: Technology Talks</p>
            <p><b>Expected price</b> : Not announced yet. <br><b>Release date</b> : 4 august, 2020 </p>
            <p class="content"></p>
            <h4 class="content">:  Motorola G 5G Plus: Key specifications </h4>
