upcoming mobile update

--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight:400;">13 Upcoming mobile phones in August, 2020</h1>
+          <h1 class="content_tittle" style="font-weight:400;">Upcoming mobile phones in August, 2020</h1>
           <p>By <span style="color:blue;">Gulshan Bhumij</span>- Updated on <b style="color: gray;">27 July, 2020</b></p>
           <hr class="my-2">
           <p class="content" style="font-size: 17px;">Are you searching for the <b>upcoming mobile phones in 2020</b>, so here is the list of <b>new mobile phone coming soon</b> in India. With lots of rumors and leaks about the upcoming smartphone, we have listed the phones which were coming soon in India. The new upcoming mobile phones are packed with lots of features like powerful processor, long battery life, better RAM management system, camera, and lots of innovation in mobile technology. New upcoming smartphones have both software and hardware updates which is the most important for mobile phones. So without taking much of your time, here is the list of best <b>upcoming phones in 2020</b>.</p>
