upcoming mobile update

--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -53,13 +53,33 @@
         <p></p>
         <div>
           <h3 style="font-weight: 400;">Upcoming mobiles in india 2020 under 15000 rs.</h3>
-          <ul>
-            <li>Poco C3 - 8,499-INR</li>
-            <li>Xiaomi A4 - 13,999-INR</li>
-            <li>Realme C15 - 12,999-INR</li>
-            <li>Redmi 9 Prime - 9,999-INR</li>
-            <li>Redmi 9A - 6,999-INR</li>
-          </ul>
+          <table style="width:100%">
+            <tr style="background: #e9ecef;">
+              <th style="font-weight: 600;">Upcoming Mobile Phones Under 15000 List</th>
+              <th style="font-weight: 600;">Expected Price</th>
+              <th style="font-weight: 600;">Expected to Launch</th>
+            </tr>
+            <tr>
+              <td>Poco C3 </td>
+              <td>Rs. 8,499</td>
+              <td>50</td>
+            </tr>
+            <tr>
+              <td>Xiaomi A4</td>
+              <td>Rs. 13,999</td>
+              <td>94</td>
+            </tr>
+            <tr>
+              <td>Realme C15</td>
+              <td>Rs. 12,999</td>
+              <td>94</td>
+            </tr>
+            <tr>
+              <td>Redmi 9A</td>
+              <td>Rs. 6,999</td>
+              <td>94</td>
+            </tr>
+          </table>
         </div>
         <p></p>
         <hr class="my-2">
