upcoming mobile update

--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India"> {% endblock desc%}
-{% block key%}<meta name="keywords" content="new mobile phone coming soon, Upcoming mobile phone in 2020, New upcoming smartphones, upcoming phones in 2020, new mobile phones 2020, new smartphone coming soon, upcoming smartphone   "> {% endblock key%}
+{% block key%}<meta name="keywords" content="new mobile phone coming soon, Upcoming mobile phone in 2020, New upcoming smartphones, upcoming phones in 2020, new mobile phones 2020, new smartphone coming soon, upcoming smartphone, Upcoming mobile phone  "> {% endblock key%}
 {% block style %}
 <style>
   .code{
@@ -52,7 +52,7 @@
         </div>
         <p></p>
         <div>
-          <h3 style="font-weight: 400;">Upcoming mobiles in india 2020 under 15000 rs.</h3>
+          <h3 style="font-weight: 400;">Upcoming mobiles phone under 15000 list.</h3>
           <table style="width:100%">
             <tr style="background: #e9ecef;">
               <th style="font-weight: 600;">Upcoming Mobile Phones Under 15000 List</th>
