upcoming mobile update

--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -27,10 +27,10 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight:400;">Upcoming mobile phones in August, 2020</h1>
+          <h1 class="content_tittle" style="font-weight:400;">Upcoming mobile phone in August, 2020</h1>
           <p>By <span style="color:blue;">Gulshan Bhumij</span>- Updated on <b style="color: gray;">27 July, 2020</b></p>
           <hr class="my-2">
-          <p class="content" style="font-size: 17px;">Are you searching for the <b>upcoming mobile phones in 2020</b>, so here is the list of <b>new mobile phone coming soon</b> in India. With lots of rumors and leaks about the upcoming smartphone, we have listed the phones which were coming soon in India. The new upcoming mobile phones are packed with lots of features like powerful processor, long battery life, better RAM management system, camera, and lots of innovation in mobile technology. New upcoming smartphones have both software and hardware updates which is the most important for mobile phones. So without taking much of your time, here is the list of best <b>upcoming phones in 2020</b>.</p>
+          <p class="content" style="font-size: 17px;">Are you searching for the <b>upcoming mobile phone in 2020</b>, so here is the list of <b>new mobile phone coming soon</b> in India. With lots of rumors and leaks about the upcoming smartphone, we have listed the phones which were coming soon in India. The new upcoming mobile phones are packed with lots of features like powerful processor, long battery life, better RAM management system, camera, and lots of innovation in mobile technology. New upcoming smartphones have both software and hardware updates which is the most important for mobile phones. So without taking much of your time, here is the list of best <b>upcoming phones in 2020</b>.</p>
         </div>
         <div class="code">
           <h3 style="font-weight:400;">The list of Upcoming mobile phones - 2020</h3>
@@ -52,7 +52,7 @@
         </div>
         <p></p>
         <div>
-          <h3 style="font-weight: 400;">Upcoming mobiles phone under 15000 list.</h3>
+          <h3 style="font-weight: 400;">Upcoming mobile phone under 15000 list.</h3>
           <table style="width:100%">
             <tr style="background: #e9ecef;">
               <th style="font-weight: 600;">Upcoming Mobile Phones Under 15000 List</th>
@@ -86,7 +86,7 @@
         <div class="info">
           <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">1. OnePlus Nord</h2>
           <div>
-            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-m31s.jpg'%}" alt="">
+            <img class="image" src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" alt="">
           </div>
           <hr class="my-2">
           <p><b>Price</b> : Starting from 24,999-INR <br><b>Release date</b> : 4th August, 2020 </p>
