--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -62,22 +62,22 @@
             <tr>
               <td>Poco C3 </td>
               <td>Rs. 8,499</td>
-              <td>50</td>
+              <td>Not announced yet.</td>
             </tr>
             <tr>
               <td>Xiaomi A4</td>
               <td>Rs. 13,999</td>
-              <td>94</td>
+              <td>20 Aug, 2020</td>
             </tr>
             <tr>
               <td>Realme C15</td>
               <td>Rs. 12,999</td>
-              <td>94</td>
+              <td>31 july, 2020</td>
             </tr>
             <tr>
               <td>Redmi 9A</td>
               <td>Rs. 6,999</td>
-              <td>94</td>
+              <td>4 august, 2020</td>
             </tr>
           </table>
         </div>
