upcoming mobile update

--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -329,7 +329,7 @@
            <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: Technology Talks</p>
            <p><b>Expected price</b> : Not announced yet. <br><b>Release date</b> : 4 august, 2020 </p>
            <p class="content"></p>
-           <h4 class="content">:  Motorola G 5G Plus: Key specifications </h4>
+           <h4 class="content"> Motorola G 5G Plus: Key specifications </h4>
            <ul class="content">
              <li>Display : 6.7-inch (1080 x 2520)</li>
              <li>Processor : Qualcomm Snapdragon 765</li>
@@ -340,7 +340,7 @@
            </ul>
            <hr class="my-2">
          </div>
-           <p class="content">You may have benefited from the above list of <b>upcoming phones 2020</b>. From now on, we will keep you informed about such <b>new mobile phones 2020</b>. If are looking for <b>best gaming phones under 20000</b> <a href="{% url 'pubg' %}">Click here</a>. </p>
+           <p class="content">You may have benefited from the above list of <b>upcoming mobile phone 2020</b>. From now on, we will keep you informed about such <b>new mobile phones 2020</b>. If are looking for <b>best gaming phones under 20000</b> <a href="{% url 'pubg' %}">Click here</a>. </p>
            <h4 style="font-weight: 400;">Thankyou :)</h4>
            <br>
           </div>
