upcoming mobile update

--- a/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Xiaomi Poco f2 price in India may be Rs 26900 and its release date may be 30 august 2020 (unofficial). This smartphone comes with 2 variants like 6/128GB, 8/128GB with color options like Moonlight White, Sky Blue, Space Grey, and Starry Purple. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Xiaomi poco f2, poco f2, Xiaomi poco f2 feature, poco f2 specification, Xiaomi poco f2 release date, poco f2 price, Xiaomi poco f2 price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Xiaomi Poco C3 price in India may be Rs 8,499 and its release date may be October 23, 2020 (unofficial). This smartphone comes with 1 variants like 3/32GB. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Xiaomi poco c3, poco c3, Xiaomi poco c3 feature, poco c3 specification, Xiaomi poco c3 release date, poco c3 price, Xiaomi poco c3 price in india"> {% endblock key%}
 {% block style %}
 <style>
   .iframe{
@@ -10,35 +10,38 @@
 </style>
 {% endblock style %}
     {% load static %}
-    {% block title%}Xiaomi Poco F2 price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Xiaomi Poco C3 price in india, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content" style="font-weight: 400;">Here rumors come out from Xiaomi is preparing to release its new phone Poco F2 as soon as possible. Talking about its price, according to me, its price can be between 26,000 to 30,000 rs.</h4>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> POCO F2 : 8/128GB for 26,990-INR Watch Full review.</h1>
+          <h4 class="content" style="font-weight: 400;">This news has come from Xiaomi, Xiaomi is thinking of bringing its smartphone Poco C3 to the market. Now let's see how long Xiaomi launches this new phone in India. This phone is going to be a budget friendly phone</h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> POCO c3 : 3/32GB for Rs 8,499 Watch Full review.</h1>
         </div>
-        <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/OW7RrbioVeU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div>
+          <img class="image" src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" alt="">
+        </div>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by:  Naxon Tech</p>
         <div class="info">
-          <h4 class="content">About POCO F2</h4>
-          <p class="content">After Poco F1, now Xiaomi is bringing a new phone called <b>Poco F2</b> and it is going to be a very reference phone. <b>Xiaomi Poco f2</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an octa-core processor and it runs on Qualcomm Snapdragon 865 chipset. with this awesome processor, games run on the higher graphic setting which gives you a wonderful gaming experience. </p>
-          <p class="content"> <b>poco f2</b> measures 163.3 mm x 75.4 mm x 8.9 mm and weighs 218 grams and it has a Super AMOLED display. The screen has a resolution of 1080 x 2400 pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get a 20-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 13 megapixels ultra-wide, 8-megapixel depth and 2 megapixels micro. camera with features like 30 x Digital Zoom, Face detection, Auto Flash, Touch to focus. It has support for 33W fast charging and has a non-removable 4100 mAh battery. </p>
-          <p class="content"><b>Xiaomi Poco f2 price in India</b> may be Rs 26900 and its <b>release date</b> may be 30 august 2020 (unofficial). This smartphone comes with 2 variants like 6/128GB, 8/128GB with color options like Moonlight White, Sky Blue, Space Grey, and Starry Purple. </p>
-          <h4 style="font-weight: 400;">Xiaomi Poco f2 Key features:</h4>
+          <h4 class="content">About POCO c3</h4>
+          <p class="content">Xiaomi is now going to launch a new smartphone, takes its Poco series one step further, its name is Poco 3. <b>Xiaomi Poco C3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an octa-core (2 GHz, Dual core, Cortex A75 + 1.8 GHz, Hexa Core, Cortex A55) processor and it runs on MediaTek Helio G80 Chipset. </p>
+          <p class="content">Xiaomi POCO C3 smartphone has a IPS LCD display. 1080 x 2340 Pixels and 395 ppi pixel density. Talking about its camera, On the front camera, you get a 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle, 8 megapixels ultra-wide, 5-megapixel depth and 2 megapixels micro. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5020 mAh battery. </p>
+          <p class="content"><b>Xiaomi Poco c3 price in India</b> may be Rs 8,499 and its <b>release date</b> may be October 23, 2020 (unofficial). This smartphone comes with 1 variants like 3/32 GB. Xiaomi Poco C3 which is expected to available in Black, Gold, orange colour. </p>
+          <h3 style="font-weight: 400;">Xiaomi Poco C3 Key features:</h3>
           <ul class="content">
-            <li>Diaplay: 6.67 inches</li>
-            <li>Processor: Qualcomm Snapdragon 865</li>
-            <li>primary camera: 64-megapixel + 13-megapixel + 8-megapixel + 2-megapixel</li>
-            <li>selfie camera: 20-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 4100 mAh battery (15.04 Wh)</li>
-            <li>Fast charging 33W.</li>
+            <li>Diaplay: 6.53 inches</li>
+            <li>Processor: MediaTek Helio G80</li>
+            <li>primary camera: 13-megapixel + 8-megapixel + 5-megapixel + 2-megapixel</li>
+            <li>selfie camera: 8-megapixel</li>
+            <li>Battery: Non-removable Li-Ion 5020 mAh battery (15.04 Wh)</li>
+            <li>Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">POCO F2 specification</h3>
+    <h3 class="spec_title">POCO c3 specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -46,7 +49,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>30 August 2020 (Unofficial)</p>
+          <p>October 23, 2020 (Unofficial)</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -70,11 +73,11 @@
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>POCO F2</p>
+          <p>POCO C3</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Moonlight White, Sky Blue, Space Grey, Starry Purple</p>
+          <p>Black, gold, orange</p>
         </div>
       </div>
     </div>
@@ -96,9 +99,13 @@
           <strong>4G</strong>
           <p>Yes - (supports Indian bands)</p>
         </div>
-        <div class="specs_info1">
+        <div class="specs_info">
           <strong>5G</strong>
           <p>No</p>
+        </div>
+        <div class="specs_info1">
+          <strong>SIM Type</strong>
+          <p>Nano-SIM (Hybrid)</p>
         </div>
       </div>
     </div>
@@ -110,39 +117,19 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>Super AMOLED capacitive touchscreen, 16M colors</p>
+          <p>IPS LCD capacitive touchscreen, 16M colors</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.67</p>
+          <p>6.53</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>	1080 x 2400 pixels</p>
+          <p>1080 x 2340 Pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
-          <p>	Corning Gorilla Glass v5</p>
-        </div>
-      </div>
-    </div>
-    <!-- 4 -->
-    <div class="specs_table">
-      <div class="specs">
-        <strong>BODY</strong>
-      </div>
-      <div class="specs_type">
-        <div class="specs_info">
-          <strong>Dimension(mm)</strong>
-          <p>163.5 x 75.4 x 8.9 mm</p>
-        </div>
-        <div class="specs_info">
-          <strong>Weight(g)</strong>
-          <p>218 g</p>
-        </div>
-        <div class="specs_info">
-          <strong>SIM Type</strong>
-          <p>Nano-SIM (Hybrid)</p>
+          <p>	Corning Gorilla Glass</p>
         </div>
       </div>
     </div>
@@ -158,7 +145,7 @@
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>Qualcomm Snapdragon 865</p>
+          <p>MediaTek Helio G80</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -166,7 +153,7 @@
         </div>
         <div class="specs_info1">
           <strong>GPU</strong>
-          <p>Adreno 650</p>
+          <p>Mali-G52</p>
         </div>
       </div>
     </div>
@@ -178,11 +165,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Card Slot</strong>
-          <p>No</p>
+          <p>Yes</p>
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>6/128GB RAM</p>
+          <p>3/32GB RAM</p>
         </div>
       </div>
     </div>
@@ -193,20 +180,20 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Camera Type</strong>
-          <p>Pop-Up</p>
+          <strong>Rear Type </strong>
+          <p>Quad</p>
         </div>
         <div class="specs_info">
-          <strong>Image</strong>
-          <p>9000 x 7000 Pixels Resolution </p>
+          <strong>Image Resolution</strong>
+          <p>4128 x 3096 Pixels</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>20 MP Primary Camera</p>
+          <p>13 MP + 8 MP + 5 MP + 2 MP</p>
         </div>
         <div class="specs_info">
-          <strong>Features</strong>
-          <p>30 x Digital Zoom, Face detection, Auto Flash, Touch to focus</p>
+          <strong>Front camera</strong>
+          <p>8 MP Primary Camera</p>
         </div>
       </div>
     </div>
@@ -218,11 +205,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Non-removable Li-Po 4100 mAh battery</p>
+          <p>Non-removable Li-Po 5020 mAh battery</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes Fast charging, 33W</p>
+          <p>Yes, Fast charging</p>
         </div>
       </div>
     </div>
@@ -234,17 +221,17 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>WLAN</strong>
-          <p>	Yes Wi-Fi 802.11, ax/b/g/n/n 5GHz, hotspot</p>
+          <p>	Yes, Wi-Fi 802.11, b/g/n, hotspot</p>
         </div>
         <div class="specs_info">
           <strong>Bluetooth</strong>
-          <p>v5.1</p>
+          <p>v5.0</p>
         </div>
         <div class="specs_info">
           <strong>GPS</strong>
           <p>Yes</p>
         </div>
-        <div class="specs_info">
+        <div class="specs_info1">
           <strong>Radio</strong>
           <p>FM radio</p>
         </div>
@@ -258,11 +245,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint (On-screen), Light sensor, Proximity sensor, Accelerometer,</p>
-        </div>
-        <div class="specs_info1">
-          <strong></strong>
-            <p> Compass, Gyroscope</p>
+            <p>Fingerprint, Light sensor, Proximity sensor, Accelerometer</p>
         </div>
       </div>
     </div>
