--- a/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
@@ -184,8 +184,8 @@
           <p>Quad</p>
         </div>
         <div class="specs_info">
-          <strong>Image Resolution</strong>
-          <p>4128 x 3096 Pixels</p>
+          <strong>Image</strong>
+          <p>4128 x 3096 Pixels Resolution</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
